--- a/index.html
+++ b/index.html
@@ -19,10 +19,51 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About</a></li>
-                        <li><a href="services.html">services</a></li>
+                        <li><a href="services.html">Services</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
+
+        <section id="showcase">
+            <div class="container">
+                <h1>Welcome to my WORLD!</h1>
+                <p>My name is Natthapong Somboonphattarakit, nickname is NEW. Student ID is 5910501950. Greetings!</p>
+            </div>
+        </section>
+
+        <section id = "newsletter">
+            <div class="container">
+                <h1>Subscibe To My lifestyle</h1>
+                <form>
+                    <input type="email" placeholder="Enter your love-ly Email...">
+                    <button type="submit" class="button_1">PUSH!</button>
+                </form>
+            </div>
+        </section>
+
+        <section id="boxes">
+            <div class="container">
+                <div class="box">
+                    <img src="./img/ku.png">
+                    <h3>Kasetsart University</h3>
+                    <p>Nontri since 1943, it's been 76 years passed. So I am KU76!</p>
+                </div>
+                <div class="box">
+                    <img src="./img/eng.png">
+                    <h3>Faculty of Engineering</h3>
+                    <p>After CHEER and TRADITIONAL RUN, best seniors of the world give me a GEN. So I am E72!</p>
+                </div>
+                <div class="box">
+                    <img src="./img/cpe.png">
+                    <h3>Department of Computer Engineering</h3>
+                    <p>The Autonomous Region of KU, So screw that E72, I am CPE30!</p>
+                </div>
+            </div>
+        </section>
+
+        <footer>
+            <p>My 'KOALY' Page, Copyright &copy; 2018</p>
+        </footer>
     </body>
 </html>
