--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="no try, just do">
     <meta name="author" content="Natthapong Somboonphattarakit 5910501950">
     <title>My 'KOALY' Page | IT'S ME!</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
