--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta name="keywords" content="no try, just do">
         <meta name="author" content="Natthapong Somboonphattarakit 5910501950">
         <title>My 'KOALY' Page | WELCOME!</title>
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <header>
@@ -47,17 +47,17 @@
         <section id="boxes">
             <div class="container">
                 <div class="box">
-                    <img src="./img/ku.png">
+                    <img src="https://i.imgur.com/1Qjl3Rt.png">
                     <h3>Kasetsart University</h3>
                     <p>Nontri since 1943, it's been 76 years passed. So I am KU76!</p>
                 </div>
                 <div class="box">
-                    <img src="./img/eng.png">
+                    <img src="https://i.imgur.com/XQvLI6J.png">
                     <h3>Faculty of Engineering</h3>
                     <p>After CHEER and TRADITIONAL RUN, best seniors of the world give me a GEN. So I am E72!</p>
                 </div>
                 <div class="box">
-                    <img src="./img/cpe.png">
+                    <img src="https://i.imgur.com/gS0HKic.png">
                     <h3>Department of Computer Engineering</h3>
                     <p>The Autonomous Region of KU, So screw that E72, I am CPE30!</p>
                 </div>
